--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "entrega-chat",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -23,6 +24,7 @@
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "faker": "^6.6.6",
+    "firebase-admin": "^11.0.0",
     "jquery": "^3.6.0",
     "mongoose": "^6.5.2",
     "multer": "^1.4.5-lts.1",
@@ -36,6 +38,5 @@
     "twilio": "^3.82.0",
     "winston": "^3.8.2",
     "yargs": "^17.5.1"
-  },
-  "description": ""
+  }
 }
